--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sweetalert2": "^11.6.15",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
