--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "axios": "^1.1.3",
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.0",
     "sweetalert2": "^11.6.15",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4",
