--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "animate.css": "^4.1.1",
     "axios": "^1.1.3",
     "daisyui": "^2.15.2",
+    "dotenv": "^16.0.2",
+    "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.0",
-    "sweetalert2": "^11.6.15",
+    "sweetalert2": "^11.4.8",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
-    "yup": "^0.32.11",
-    "dotenv": "^16.0.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "serve": "react-scripts start",
