--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
