--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "animate.css": "^4.1.1",
     "axios": "^1.1.3",
     "daisyui": "^2.15.2",
+    "dotenv": "^16.0.2",
+    "firebase": "^9.16.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,8 +25,7 @@
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
-    "yup": "^0.32.11",
-    "dotenv": "^16.0.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "serve": "react-scripts start",
